--- a/spotifyvault/package.json
+++ b/spotifyvault/package.json
@@ -17,11 +17,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "dotenv": "^16.4.5",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "three": "^0.165.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
