--- a/spotifyvault/package.json
+++ b/spotifyvault/package.json
@@ -18,11 +18,14 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "three": "^0.165.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.7"
   }
 }
